--- a/src/components/feed/feed.css
+++ b/src/components/feed/feed.css
@@ -1,5 +1,20 @@
 .feed{
     flex: 5.5;
+    height: calc(100vh - 50px);
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar{
+    width: 1px;
+
+}
+
+::-webkit-scrollbar-track{
+    background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #f8f8f8;
 }
 
 .feedWrapper{
