--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -2,6 +2,8 @@
     flex: 2.5;
     height: calc(100vh - 50px);
     overflow-y: scroll;
+    position: sticky;
+    top: 50px;
     /* background-color: aquamarine; */
 }
 
